--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -7,57 +7,56 @@ applyHtmlTag="false"
 applyBodyTag="false"   
 id="todo"
 >
-<html ng-app="checklistApp">        
+<html ng-app="checklistApp">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
-    <meta name="viewport" content="initial-scale = 1.0, user-scalable = no"/>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
-</head>    
+<meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
+<meta name="viewport" content="initial-scale = 1.0, user-scalable = no"/>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
+</head>
 
 <body>
-    <div ng-controller="AdminCtrl">
-        <form name="newChecklistForm">
-          <h1>Checklist Name</h1>
-          <input type="text" ng-model="checklist.name" name="formName" ng-required="true"></input>
-          <h1>Checklist Description</h1>
-          <input type="text" ng-model="checklist.description"></input>
-          <div ng-repeat="item in items">
-            <h1> Question {{$index + 1}}</h1>
-            <input type="text" ng-model="item.Question__c" name="Q1" ng-required="true"></input>
-            <input type="number" ng-model="item.Order__c" name="O2" ng-required="true"></input>
-            <input type="checkbox" ng-model="item.Required__c" name="O3"></input>
-            <select ng-model="item.Type__c" ng-options="type for type in types" ng-required="true"></select>
-            <input type="text" ng-model="item.Values__c" name="Q1" ng-show="showValues(item)"></input>
+<div ng-controller="AdminCtrl">
+  <form name="newChecklistForm">
+    <h1>Checklist Name</h1>
+    <input type="text" ng-model="checklist.name" name="formName" ng-required="true"></input>
+    <h1>Checklist Description</h1>
+    <input type="text" ng-model="checklist.description"></input>
+    <div ng-repeat="item in items">
+      <h1> Question {{$index + 1}}</h1>
+      <input type="text" ng-model="item.Question__c" name="Q1" ng-required="true"></input>
+      <input type="number" ng-model="item.Order__c" name="O2" ng-required="true"></input>
+      <input type="checkbox" ng-model="item.Required__c" name="O3"></input>
+      <select ng-model="item.Type__c" ng-options="type for type in types" ng-required="true"></select>
+      <input type="text" ng-model="item.Values__c" name="Q1" ng-show="showValues(item)"></input>
+      <p>{{item.Question__c}}</p>
+    </div>
+    <input type="button" value="+" ng-click="addQuestion()"></input>
+    <input type="button" value="-" ng-click="removeQuestion()"></input>
 
-            {{item.Question__c}}
-        </div>
-        <input type="button" value="+" ng-click="addQuestion()"></input>
-        <input type="button" value="-" ng-click="removeQuestion()"></input>
+    <input type="submit" value="Submit " ng-click="newChecklist()"> </input>
 
-        <input type="submit" value="Submit " ng-click="newChecklist()"> </input>
-
+  </form>
+  <div id="checklistList" >
+    <form name="EditChecklistForm">
+      <h1>Edit Checklist</h1>
+      <li ng-repeat=""> 
+      <p> Name: </p> <input type="text" ng-model="item.Name" ng-required="true"></input>
+      <p> Description: </p> <input type="text" ng-model="item.Description__c" ng-required="true"></input>
+      <p> Id: {{item.Id}} </p>
+      <input type="submit" value="Submit" ng-click="editChecklist()"></input>
+      </li>
     </form>
-    <div id="checklistList" >
-     <form name="EditChecklistForm">
-        <h1>Edit Checklist</h1>
-        <li ng-repeat=""> 
-            <p> Name: </p> <input type="text" ng-model="item.Name" ng-required="true"></input>
-            <p> Description: </p> <input type="text" ng-model="item.Description__c" ng-required="true"></input>
-            <p> Id: {{item.Id}} </p>
-            <input type="submit" value="Submit" ng-click="editChecklist()"></input>
-        </li>
-    </form>
-        <div ng-repeat="question in questions | filter:{isActive__c:'true'}">
-          <input type="text" ng-model="question.Question__c" ng-required="true"></input>
-          Order: {{question.Order__c}}
-          <input type="checkbox" ng-model="question.Required__c"></input>
-          Required? : {{question.Required__c}}
-          <input type="button" value="Delete" ng-click="deleteChecklistItem(question)"></input>
-      </div>
-              <input type="button" value="+" ng-click="addQuestionEdit()"></input>
+    <div ng-repeat="question in questions | filter:{isActive__c:'true'}">
+      <input type="text" ng-model="question.Question__c" ng-required="true"></input>
+      Order: {{question.Order__c}}
+      <input type="checkbox" ng-model="question.Required__c"></input>
+      Required? : {{question.Required__c}}
+      <input type="button" value="Delete" ng-click="deleteChecklistItem(question)"></input>
+    </div>
+    <input type="button" value="+" ng-click="addQuestionEdit()"></input>
 
-</div>
+  </div>
 </div>
 
 </body>
@@ -81,108 +80,108 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.types = ['Yes/No', 'Number', 'Text', 'Date','Long Text', 'Rating', 'Picklist', 'Multi-Select'];
     $scope.ittypesem = $scope.checklists[3];
     $scope.newChecklist = function() {
-     if ($scope.newChecklistForm.$valid) {
-        $scope.createChecklist();
+    if ($scope.newChecklistForm.$valid) {
+    $scope.createChecklist();
     } else {
-        console.log('invalid');
+    console.log('invalid');
     }
-}
-$scope.createChecklist = function() {
-    for(var i = 0; i < $scope.items.length; i++) {
+    }
+    $scope.createChecklist = function() {
+      for(var i = 0; i < $scope.items.length; i++) {
         delete $scope.items[i].$$hashKey;
         console.log($scope.items[i].Type__c);
+      }
+      Visualforce.remoting.Manager.invokeAction(
+          '{!$RemoteAction.ChecklistAdminController.createChecklistWithQuestions}',
+          $scope.checklist.name,
+          $scope.checklist.description,
+          $scope.items,
+          function(result, event) {
+          if (event.status) {
+          console.log('Created everything');
+          } else if (event.type == 'exception') {
+          console.log('Exception');
+          } else {
+          console.log('Error!');
+          }
+          },
+          {escape: true}
+          );
+    };
+    $scope.addQuestion = function() {
+      $scope.items.push(new Object());
     }
-    Visualforce.remoting.Manager.invokeAction(
-        '{!$RemoteAction.ChecklistAdminController.createChecklistWithQuestions}',
-        $scope.checklist.name,
-        $scope.checklist.description,
-        $scope.items,
-        function(result, event) {
-            if (event.status) {
-                console.log('Created everything');
-            } else if (event.type == 'exception') {
-                console.log('Exception');
-            } else {
-                console.log('Error!');
-            }
-        },
-        {escape: true}
-        );
-};
-$scope.addQuestion = function() {
-    $scope.items.push(new Object());
-}
-$scope.addQuestionEdit = function() {
-    var item = {isActive__c : true, Order__c: $scope.questions.length + 1}
-    $scope.questions.push(item);
-    console.log($scope.questions.length);
-}
-$scope.showValues = function(item) {
-    return (item.Type__c == 'Rating') || (item.Type__c == 'Picklist') || (item.Type__c == 'Multi-Select');
-}
-$scope.removeQuestion = function() {
-    $scope.items.pop();
-}
-$scope.editChecklist = function() {
-    delete $scope.item.attributes;
-    Visualforce.remoting.Manager.invokeAction(
-        '{!$RemoteAction.ChecklistAdminController.updateChecklist}',
-        $scope.item,
-        function(result, event) {
-            if (event.status) {
-                console.log('Updated everything');
-            } else if (event.type == 'exeception') {
-                console.log('Exception');
-            } else {
-                console.log('Error!');
-            }
-        },
-        {escape: true}
-        );
-    for(var i = 0; i < $scope.questions.length; i++) {
+    $scope.addQuestionEdit = function() {
+      var item = {isActive__c : true, Order__c: $scope.questions.length + 1}
+      $scope.questions.push(item);
+      console.log($scope.questions.length);
+    }
+    $scope.showValues = function(item) {
+      return (item.Type__c == 'Rating') || (item.Type__c == 'Picklist') || (item.Type__c == 'Multi-Select');
+    }
+    $scope.removeQuestion = function() {
+      $scope.items.pop();
+    }
+    $scope.editChecklist = function() {
+      delete $scope.item.attributes;
+      Visualforce.remoting.Manager.invokeAction(
+          '{!$RemoteAction.ChecklistAdminController.updateChecklist}',
+          $scope.item,
+          function(result, event) {
+          if (event.status) {
+          console.log('Updated everything');
+          } else if (event.type == 'exeception') {
+          console.log('Exception');
+          } else {
+          console.log('Error!');
+          }
+          },
+          {escape: true}
+          );
+      for(var i = 0; i < $scope.questions.length; i++) {
         delete $scope.questions[i].$$hashKey;
         $scope.questions[i].Checklist__c = $scope.item.Id;
+      }
+      console.log($scope.questions);
+      Visualforce.remoting.Manager.invokeAction(
+          '{!$RemoteAction.ChecklistAdminController.updateChecklistItems}',
+          $scope.questions,
+          function(result, event) {
+          if (event.status) {
+          console.log('Updated everything items');
+          } else if (event.type == 'exeception') {
+          console.log('Exception');
+          } else {
+          console.log('Error!');
+          }
+          }, {escape: true}
+          );
+    };
+    $scope.deleteChecklistItem = function(item) {
+      console.log(item);
+      item.isActive__c = false;
     }
-    console.log($scope.questions);
-    Visualforce.remoting.Manager.invokeAction(
-        '{!$RemoteAction.ChecklistAdminController.updateChecklistItems}',
-        $scope.questions,
-        function(result, event) {
-            if (event.status) {
-                console.log('Updated everything items');
-            } else if (event.type == 'exeception') {
-                console.log('Exception');
-            } else {
-                console.log('Error!');
-            }
-        }, {escape: true}
-        );
-};
-$scope.deleteChecklistItem = function(item) {
-    console.log(item);
-    item.isActive__c = false;
-}
-$scope.getChecklistItems = function() {
-    delete $scope.item.attributes;
-    console.log($scope.item);
-    Visualforce.remoting.Manager.invokeAction(
-        '{!$RemoteAction.ChecklistAdminController.getChecklistItems}',
-        $scope.item,
-        function(result, event) {
-            if(event.status) {
-                console.log(result);
-                $scope.questions = result;
-                $scope.$apply();
-            } else if (event.type == 'exception') {
-                console.log('Exception');
-            } else {
-                console.log('Error!');
-            }
-        },
-        {escape:true}
-        );
-};
-$scope.getChecklistItems();
+    $scope.getChecklistItems = function() {
+      delete $scope.item.attributes;
+      console.log($scope.item);
+      Visualforce.remoting.Manager.invokeAction(
+          '{!$RemoteAction.ChecklistAdminController.getChecklistItems}',
+          $scope.item,
+          function(result, event) {
+          if(event.status) {
+          console.log(result);
+          $scope.questions = result;
+          $scope.$apply();
+          } else if (event.type == 'exception') {
+          console.log('Exception');
+          } else {
+          console.log('Error!');
+          }
+          },
+          {escape:true}
+          );
+    };
+    $scope.getChecklistItems();
 });
 
 </script>
