--- a/Checklist.html
+++ b/Checklist.html
@@ -91,12 +91,8 @@
                                 <div ng-show="checklistitem.Checklist_Item__r.Type__c=='Rating'">
                                     {{checklistitem.Answer__c}}
                                 </div>
-
                                 <select id="form_date_{{checklistitem.Checklist_Item__c}}" ng-switch-when="Picklist" ng-model="checklistitem.Answer__c" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}" ng-options="val for val in checklistitem.Checklist_Item__r.Values"> 
                                 </select>
-
-
-
                                 <select ng-options="val for val in checklistitem.Checklist_Item__r.Values" ng-multiple="true" multiple="true" ng-switch-when="Multi-Select" ng-model="checklistitem.Answer__c"></select>
                              </span>
                         </li>
@@ -208,6 +204,9 @@ myApp.service('userService', function() {
                         if (type == "Picklist" || type == "Rating" || type == "Multi-Select") {
                             var values = checklistitems[i].Checklist_Item__r.Values__c; 
                             if (values) checklistitems[i].Checklist_Item__r.Values = values.split(', ');
+                            if (type == "Multi-Select") {
+                                checklistitems[i].Answer__c = checklistitems[i].Answer__c.split(' ');
+                            }
                         }
                         if (checklistitems[i].Answer__c == "true") { 
                             checklistitems[i].Answer__c = true;
@@ -352,6 +351,12 @@ myApp.controller("ChecklistCtrl", function ($scope, userService) {
             checklist_response = '';
         }
         */
+        for(var i = 0; i < $scope.checklistitems.length; i++) {
+            var type = $scope.checklistitems[i].Checklist_Item__r.Type__c;
+            if (type == "Multi-Select") {
+                $scope.checklistitems[i].Answer__c = $scope.checklistitems[i].Answer__c.join(" ");
+            }
+        }
         var checklist_response = $('#checklist_id').val(); 
         Visualforce.remoting.Manager.invokeAction(
             '{!$RemoteAction.ChecklistExtension.submit_responses}',
