--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -33,14 +33,12 @@ id="todo"
     </div>
     <input type="button" value="+" ng-click="addQuestion()"></input>
     <input type="button" value="-" ng-click="removeQuestion()"></input>
-
     <input type="submit" value="Submit " ng-click="newChecklist()"> </input>
-
   </form>
   <div id="checklistList" >
     <form name="EditChecklistForm">
       <h1>Edit Checklist</h1>
-      <li ng-repeat=""> 
+      <li ng-repeat="">
       <p> Name: </p> <input type="text" ng-model="item.Name" ng-required="true"></input>
       <p> Description: </p> <input type="text" ng-model="item.Description__c" ng-required="true"></input>
       <p> Id: {{item.Id}} </p>
@@ -48,24 +46,21 @@ id="todo"
       </li>
     </form>
     <div ng-repeat="question in questions | filter:{isActive__c:'true'}">
-      <input type="text" ng-model="question.Question__c" ng-required="true"></input>
-      Order: {{question.Order__c}}
+      {{question.Question__c}}
+      Order:
+      <input type="number" ng-model="question.Order__c" ng-required="true"></input>
       <input type="checkbox" ng-model="question.Required__c"></input>
       Required? : {{question.Required__c}}
       <input type="button" value="Delete" ng-click="deleteChecklistItem(question)"></input>
     </div>
     <input type="button" value="+" ng-click="addQuestionEdit()"></input>
-
   </div>
 </div>
-
 </body>
 
 <script>
 /* Angular */
 var checklistApp = angular.module('checklistApp', []);
-var checklistitems;
-
 checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.numQuestions = 1;
     $scope.items = new Array();
@@ -79,6 +74,9 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.item = $scope.checklists[0];
     $scope.types = ['Yes/No', 'Number', 'Text', 'Date','Long Text', 'Rating', 'Picklist', 'Multi-Select'];
     $scope.ittypesem = $scope.checklists[3];
+    $scope.inDB = function(item) {
+        return item.Id != null;
+    }
     $scope.newChecklist = function() {
     if ($scope.newChecklistForm.$valid) {
     $scope.createChecklist();
@@ -160,6 +158,22 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.deleteChecklistItem = function(item) {
       console.log(item);
       item.isActive__c = false;
+      if(!$scope.inDB(item)) {
+          console.log("new");
+          var index = $scope.questions.indexOf(item);
+          if (index > -1) {
+              $scope.questions.splice(index, 1);
+          }
+      }
+    }
+    $scope.questionCount = function() {
+        var count = 0;
+        for (var i = 0; i < $scope.questions.length; i++) {
+            if ($scope.questions[i].isActive__c) {
+                count++;
+            }
+        }
+        return count;
     }
     $scope.getChecklistItems = function() {
       delete $scope.item.attributes;
