--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -46,7 +46,8 @@ id="todo"
       </li>
     </form>
     <div ng-repeat="question in questions | filter:{isActive__c:'true'}">
-      {{question.Question__c}}
+      <p ng-show="inDB(question)">{{question.Question__c}}</p>
+      <input ng-show="!inDB(question)" type="text" ng-model="question.Question__c" ng-required="true"></input>
       Order:
       <input type="number" ng-model="question.Order__c" ng-required="true"></input>
       <input type="checkbox" ng-model="question.Required__c"></input>
